@@ -24,3 +24,4 @@
 - qwt_compat.h removed
 - QwtValuePointData added for curves, where the x values are the index
 - a couple of new QwtPlotCurve::setSamples alternatives
+- qwtMinF/qwtMaxF added to avoid compiler issues, when qreal us a float
